@@ -20,39 +20,6 @@ defined('JPATH_PLATFORM') or die;
 class JSessionStorageDatabase extends JSessionStorage
 {
 	/**
-	 * @var    unknown  No idea what this does.
-	 * @since  11.1
-	 */
-	protected $_data = null;
-
-	/**
-	 * Open the SessionHandler backend.
-	 *
-	 * @param   string  $save_path     The path to the session object.
-	 * @param   string  $session_name  The name of the session.
-	 *
-	 * @return  boolean  True on success, false otherwise.
-	 *
-	 * @since   11.1
-	 */
-	public function open($save_path, $session_name)
-	{
-		return true;
-	}
-
-	/**
-	 * Close the SessionHandler backend.
-	 *
-	 * @return  boolean  True on success, false otherwise.
-	 *
-	 * @since   11.1
-	 */
-	public function close()
-	{
-		return true;
-	}
-
-	/**
 	 * Read the data for a particular session identifier from the SessionHandler backend.
 	 *
 	 * @param   string  $id  The session identifier.
@@ -70,15 +37,22 @@ class JSessionStorageDatabase extends JSessionStorage
 			return false;
 		}
 
-		// Get the session data from the database table.
-		$query = $db->getQuery(true);
-		$query->select($db->quoteName('data'))
+		try
+		{
+			// Get the session data from the database table.
+			$query = $db->getQuery(true);
+			$query->select($db->quoteName('data'))
 			->from($db->quoteName('#__session'))
 			->where($db->quoteName('session_id') . ' = ' . $db->quote($id));
 
-		$db->setQuery($query);
+			$db->setQuery($query);
 
-		return (string) $db->loadResult();
+			return (string) $db->loadResult();
+		}
+		catch (Exception $e)
+		{
+			return false;
+		}
 	}
 
 	/**
@@ -100,33 +74,40 @@ class JSessionStorageDatabase extends JSessionStorage
 			return false;
 		}
 
-		$query = $db->getQuery(true);
-		$query->update($db->quoteName('#__session'))
+		try
+		{
+			$query = $db->getQuery(true);
+			$query->update($db->quoteName('#__session'))
 			->set($db->quoteName('data') . ' = ' . $db->quote($data))
 			->set($db->quoteName('time') . ' = ' . $db->quote((int) time()))
 			->where($db->quoteName('session_id') . ' = ' . $db->quote($id));
 
-		// Try to update the session data in the database table.
-		$db->setQuery($query);
-		if (!$db->execute())
-		{
-			return false;
-		}
+			// Try to update the session data in the database table.
+			$db->setQuery($query);
+			if (!$db->execute())
+			{
+				return false;
+			}
 
-		if ($db->getAffectedRows())
-		{
-			return true;
-		}
-		else
-		{
-			$query->clear();
-			$query->insert($db->quoteName('#__session'))
+			if ($db->getAffectedRows())
+			{
+				return true;
+			}
+			else
+			{
+				$query->clear();
+				$query->insert($db->quoteName('#__session'))
 				->columns($db->quoteName('session_id') . ', ' . $db->quoteName('data') . ', ' . $db->quoteName('time'))
 				->values($db->quote($id) . ', ' . $db->quote($data) . ', ' . $db->quote((int) time()));
 
-			// If the session does not exist, we need to insert the session.
-			$db->setQuery($query);
-			return (boolean) $db->execute();
+				// If the session does not exist, we need to insert the session.
+				$db->setQuery($query);
+				return (boolean) $db->execute();
+			}
+		}
+		catch (Exception $e)
+		{
+			return false;
 		}
 	}
 
@@ -148,14 +129,21 @@ class JSessionStorageDatabase extends JSessionStorage
 			return false;
 		}
 
-		$query = $db->getQuery(true);
-		$query->delete($db->quoteName('#__session'))
+		try
+		{
+			$query = $db->getQuery(true);
+			$query->delete($db->quoteName('#__session'))
 			->where($db->quoteName('session_id') . ' = ' . $db->quote($id));
 
-		// Remove a session from the database.
-		$db->setQuery($query);
+			// Remove a session from the database.
+			$db->setQuery($query);
 
-		return (boolean) $db->execute();
+			return (boolean) $db->execute();
+		}
+		catch (Exception $e)
+		{
+			return false;
+		}
 	}
 
 	/**
@@ -179,13 +167,20 @@ class JSessionStorageDatabase extends JSessionStorage
 		// Determine the timestamp threshold with which to purge old sessions.
 		$past = time() - $lifetime;
 
-		$query = $db->getQuery(true);
-		$query->delete($db->quoteName('#__session'))
+		try
+		{
+			$query = $db->getQuery(true);
+			$query->delete($db->quoteName('#__session'))
 			->where($db->quoteName('time') . ' < ' . $db->quote((int) $past));
 
-		// Remove expired sessions from the database.
-		$db->setQuery($query);
+			// Remove expired sessions from the database.
+			$db->setQuery($query);
 
-		return (boolean) $db->execute();
+			return (boolean) $db->execute();
+		}
+		catch (Exception $e)
+		{
+			return false;
+		}
 	}
 }
