@@ -32,6 +32,7 @@ $ -> Language fix or change
  ^ [#28380] *Normalizing Beez_20 css and js loading
  ^ [#28642] Clean up the installation a tiny bit. Thanks Rouven
  # [#28025] Joomla Bugfix: Exchange of wrong picture by hide.js fixed. Thanks Udo
+ ^ [#28645] Clean up the session package based on what was done in the platform. Thanks Rouven
 
 10-Jun-2012 Jean-Marie Simonet
  # [#28426] only a single JFormFieldColor field can exist (functionally) within a form. Thanks Dennis
